--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,9 +3,16 @@
 
 name: Build 1.8.9
 
+
 on:
   push:
-    branches: [ master ]
+    branches:
+    - master
+    - main
+  pull_request:
+    branches:
+    - master
+    - main
 
 jobs:
   build:
@@ -14,13 +21,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        java-version: '11'
-        distribution: 'adopt'
-        cache: gradle
+        java-version: 1.8
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Upload jar
+      uses: actions/upload-artifact@v1
+      with:
+        name: Artifacts
+        path: build/libs/
